# ext-Simple-Sockets

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.m4  config.w32  php_socket_server.h  socket_server.cpp
examples/: tcp_socket_client.php  tcp_socket_server.php  udp_socket_client.php  udp_socket_server.php
lib/: socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h  socket_server_errors.h
src/: PhpSocketClient.cpp  PhpSocketClient.h  PhpSocketServer.cpp  PhpSocketServer.h  ZendUtil.h
stubs/: socket_server.php
