PROJECT(simple_tcp_server)
SET(SOCKET_SERVER_VERSION 0.1.0)
SET(SOCKET_SERVER_CLFLAGS)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS *.cpp)
FILE(GLOB_RECURSE HEAD_FILES FOLLOW_SYMLINKS *.h)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#message(STATUS "source=${SRC_LIST}")
#message(STATUS "header=${HEAD_FILES}")

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

SET(PHP_SOURCE /usr/local/Cellar/php/7.2.6/include/php)
INCLUDE_DIRECTORIES(BEFORE ./ ${PHP_SOURCE} ${PHP_SOURCE}/main ${PHP_SOURCE}/sapi ${PHP_SOURCE}/TSRM ${PHP_SOURCE}/Zend)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#shared library
ADD_LIBRARY(shared SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(shared PROPERTIES OUTPUT_NAME "socket-server" VERSION ${SOCKET_SERVER_VERSION})
TARGET_LINK_LIBRARIES(shared ${SOCKET_SERVER_CFLAGS})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})